# cmake-tutorial-workthough

./: LICENSE  README.md  _config.yml  fjas.md  index.md  step01.md  step02.md  step03.md  step1.md
_posts/: 2022-08-25-welcome-to-jekyll.markdown
cmake-3.24.1-tutorial-source/Step1/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
cmake-3.24.1-tutorial-source/Step2/: CMakeLists.txt  tutorial.cxx
